fix: make time panel styling more consistent on mobile

--- a/src/assets/less/coloration.less
+++ b/src/assets/less/coloration.less
@@ -34,6 +34,10 @@ table, [class*='badge-'] {
   }
 }
 
+.navbar-nav .dropdown-item{
+  color: @text-faded;
+}
+
 .dropdown-header {
   color: @dh-color;
 }
@@ -54,7 +58,7 @@ table, [class*='badge-'] {
 }
 
 .dropdown-item > i {
-  color: @dh-color;
+  color: @text-faded;
 }
 
 .router-link-exact-active.router-link-active,
