--- a/src/assets/less/retro.less
+++ b/src/assets/less/retro.less
@@ -1,5 +1,6 @@
 .retro {
   @text-color:        #39ff14;
+  @text-faded:        @text-color;
   @bg:                #000;
   @bg-darker:         #000;
   @link-color:        @text-color;
